Segundo commit para teste

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 </head>
 <body>
     <ul>
-        <li>Vagrant 3</li>
-        <li>Docker 3</li>
+        <li>Vagrant 1</li>
+        <li>Docker 2</li>
         <li>Ansible 3 </li>
-        <li>Integração Continua 2</li>
+        <li>Integração Continua 4</li>
+        <li>Criação de nova linha 5</li>
     </ul>
 </body>    
 </html>
