ALterando de LD para DD

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <title>Cursos da Alura que eu estou fazendo-Alterando titulo da pagina2 - lista alterada xxxxxx</title>    
 </head>
 <body>
-    <ul>
-        <li>Vagrant 1</li>
-        <li>Docker 2</li>
-        <li>Ansible 3 </li>
-        <li>Integração Continua 4</li>
-        <li>Criação de nova linha 5</li>
-    </ul>
+    <dl>
+        <dd>Vagrant 1</dd>
+        <dd>Docker 2</dd>
+        <dd>Ansible 3 </dd>
+        <dd>Integração Continua 4</dd>
+        <dd>Criação de nova linha 5 </dd>
+    </dl>
 </body>    
 </html>
 
