incluindo linha 6, linha7 e linha 8

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <dd>Ansible 3 </dd>
         <dd>Integração Continua 4</dd>
         <dd>Criação de nova linha 5 </dd>
+        <dd>Criação de nova linha 6 </dd>
+        <dd>Criação de nova linha 7 </dd>
+        <dd>Criação de nova linha 8 </dd>
     </dl>
 </body>    
 </html>
